--- a/about.html
+++ b/about.html
@@ -328,8 +328,8 @@
                                     <img src="img/logo.png" alt="">
                                 </a>
                             </div>
-                            <p class="footer_text">200, A-block, Green road, USA <br>
-                                +10 367 267 2678 <br>
+                            <p class="footer_text">PRETORIA sunnyside <br>
+                                +2067 2678 <br>
                                 <a class="domain" href="#">lawyer@contact.com</a></p>
                             <div class="socail_links">
                                 <ul>
@@ -400,7 +400,8 @@
                     <div class="col-xl-12">
                         <p class="copy_right text-center">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> <a href="https://c\
+\olorlib.com" target="_blank">Banele</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
