--- a/contact.html
+++ b/contact.html
@@ -197,7 +197,7 @@
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-email"></i></span>
                             <div class="media-body">
-                                <h3>support@colorlib.com</h3>
+                                <h3>banele@cb.com</h3>
                                 <p>Send us your query anytime!</p>
                             </div>
                         </div>
@@ -227,9 +227,9 @@
                                 <h3 class="footer_title">
                                     address
                                 </h3>
-                                <p class="footer_text">200, A-block, Green road, USA <br>
-                                    +10 367 267 2678 <br>
-                                    <a class="domain" href="#">contact@nonprofit.com</a></p>
+                                <p class="footer_text">PRETORIA <br>
+                                    0 67 267 2678 <br>
+                                    <a class="domain" href="#">banelem@nonprofit.com</a></p>
                                 <div class="socail_links">
                                     <ul>
                                         <li>
@@ -286,7 +286,7 @@
                         <div class="col-xl-12">
                             <p class="copy_right text-center">
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made by <a href="https://colorlib.com" target="_blank">Banele Mgwevu</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             </p>
                         </div>
